# Inter-IIT-Prep

./: .gitignore  README.md
1_Learning Pydantic/: intro.ipynb
Agent with MCP/: main.py  requirements.txt
LangGraph ChatBot Techniques/: pyproject.toml
LangGraph ChatBot Techniques/LangGraph Chatbots/: ReAct_Agent.ipynb  basic_bot.ipynb  chatbot_with_tools.ipynb  langgraph human in the loop.ipynb  langgraph memory and streaming.ipynb
Learning LangChain/: langchain_learning.ipynb
Learning Pydantic/: intro.ipynb
